--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -1,13 +1,148 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<!-- Add CSS at the head of HTML file -->
-    <link rel="stylesheet" href="./css/main.css">
-</head>
-<body>
-		<!-- Your code goes here-->
+<style type="text/css">
+	
+	
+    #divmm{
+        width:200px;
+        height:400px;
+        border:1px solid #; 
+        margin-top:-45%;
+        margin-left: 50%; 
+        background-color: #055B26; 
+        float: left;
+    }
+    #mainimg{
+    	padding: 50px 20px 20px 50px;
+        margin:100px auto auto auto;
+        height: 596px;
+        width: 769px;
+        //border: 1px solid red;
+        background-image: url("image/indices.jpg");
+        background-repeat: no-repeat;
+        vertical-align: middle;
+        position: center;
+        align-content:center;
+        align-items:center; 
+        font-family: Calibri;      
+    }
+    body {
+            height: 80%;
+            background-color: #808080;
+    }
 
-	<!-- Add JS at the bottom of HTML file --> 
-        <script src="./js/main.js"></script>
+    .left
+    { 
+        color: white;
+        font-size:130%;
+        margin-left: 6%;
+        margin-top: 5%;
+        text-decoration: none;
+        width: 25%;
+        float: left;
+        height:50%;
+    }
+    a{
+        text-decoration: none;
+        color: white;
+    }
+
+    #humarus{
+         width: 80px;
+    }
+
+    #innominate{
+       margin-top: 30px;
+       width: 80px;
+   }
+     .submit{
+        margin-left:-110px;
+        margin-top: 46%;
+        color: green;
+
+     }
+
+</style>
+
+<script>
+
+function check()
+{
+    var a = document.getElementById("humarus").value;
+    var b = document.getElementById("innominate").value;
+    var c = document.getElementById("patella").value;
+    var d = document.getElementById("tibia").value;
+    var e = document.getElementById("fibula").value;
+    var f = document.getElementById("cranium").value;
+    var g = document.getElementById("mandible").value;
+    var h = document.getElementById("rib").value;
+    var i = document.getElementById("vertebra").value;
+    var j = document.getElementById("radius").value;
+    var k = document.getElementById("femur").value;
+
+if((a=="humarus") && (b == "innominate") && (c == "patella") && (d == "tibia")  && (e == "fibula") && (f == "cranium") && (g == "mandible") && (h == "rib") && (i == "vertebra") && (j =="radius") && (k == "femur"))
+    {    
+    alert("Correct");
+    
+    }
+    else
+    {
+
+        alert("enter a correct value");
+    }   
+    
+}
+function allowDrop(ev)
+{
+ev.preventDefault();
+}
+
+function drag(ev)
+{
+ev.dataTransfer.setData("Text",ev.target.id);
+}
+
+function drop(ev)
+{
+ev.preventDefault();
+var data=ev.dataTransfer.getData("Text");
+ev.target.appendChild(document.getElementById(data));
+}
+</script>
+<body >
+
+
+<div id="mainimg" ondrop="drop(event)" ondragover="allowDrop(event)">
+
+<div class="left">
+
+<a href="cranial_index_HK.html">1. Cranial</a><br><br><br>
+
+<a href="lengthheight1.html">2. Lenth Height or Cranial Index</a><br><br><br>
+
+<a href="lengthheight3.html">3. Breadth Height Cranial Index or Transverse Vertical</a><br><br><br>
+
+<a href="upperfacial.html">4. Upper Facial Index</a><br><br><br>
+
+<a href="nasal.html">5. Nasal Index</a><br><br><br>
+
+</div>
+
+
+
+<!--<input type="submit" name="submit" onclick="check()" value="Submit" class="submit">-->
+
+</div>
+
+
+
+
+<!--<div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+<img id="drag1" src="demo.jpg" draggable="true"
+ondragstart="drag(event)" width="336" height="69">
+
+
+<div id="div2" ondrop="drop(event)"
+ondragover="allowDrop(event)"></div>
+<img id="drag1" src="shape1.jpg" draggable="true"
+ondragstart="drag(event)" width="336" height="69">-->
+
 </body>
-</html>
